<resources>
    <string name="app_name">Swedbank Pay Example</string>

    <string name="cart_button">Open shopping cart</string>

    <!--Select method fragment-->
    <string name="select_method_backend_supported_flow">Backend supported flow (webshop)</string>
    <string name="select_method_standalone_urls">Stand-alone URLs</string>

    <!--Standalone URL config fragment-->
    <string name="standalone_url_config_view_checkout_url_hint">View checkout URL</string>
    <string name="standalone_url_config_base_url_hint">Base URL</string>
    <string name="standalone_url_config_complete_url_hint">Complete URL</string>
    <string name="standalone_url_config_cancel_url_hint">Cancel URL</string>
    <string name="standalone_url_config_fragment_payment_completed">Payment completed</string>
    <string name="standalone_url_config_fragment_payment_cancelled">Payment cancelled</string>
    <string name="standalone_url_config_fragment_checkout_v3">Use CheckoutV3</string>
    <string name="standalone_url_config_payment_url_hint">Payment URL</string>
    <string name="standalone_url_config_payment_url_scheme">swedbankexample://</string>
    <string name="standalone_url_session_url_hint">Session URL</string>

    <!-- Alert dialog -->
    <string name="option_ok">Ok</string>
    <string name="option_retry">Retry</string>

    <!-- Swish instrument -->
    <string name="swish_using_this_device">Swish using this device</string>
    <string name="swish_number_hint">Swish number</string>
    <string name="open_swish_on_another_phone">Swish</string>
    <string name="swish_with_prefill">Swish: %1$s</string>

    <!-- Credit card instrument -->
    <string name="credit_card_with_prefill">Credit Card: %1$s\n%2$s %3$s</string>

    <!-- Web based instrument -->
    <string name="web_based_instrument">Web Based \n%1$s</string>

    <string name="google_pay_title">Google Pay</string>
    <string name="google_pay_readiness">Is ready to pay: %1$s\n…with existing payment methods: %2$s</string>
    <string name="new_credit_card">New credit card</string>

    <string name="get_payment_menu">Get payment menu</string>
    <string name="get_payment_menu_restricted">Get payment menu\nRestricted to non native</string>

    <!-- Error -->
    <string name="payment_session_api_request_failed">Payment session api request failed</string>
    <string name="payment_session_api_request_failed_message">%s%s</string>
    <string name="payment_session_3d_secure_fragment_load_failed">Payment session 3d secure fragment load failed</string>
    <string name="payment_session_3d_secure_fragment_load_failed_message">%d: %s</string>
    <string name="invalid_url">Invalid Url\nPlease try again</string>
    <string name="unknown_error">Unknown error\nPlease try again</string>
    <string name="payment_session_end_reached">Payment session end reached</string>
    <string name="payment_session_internal_inconsistency_error">Internal inconsistency error</string>
    <string name="payment_session_automatic_configuration_failed">Automatic configuration failed</string>
    <string name="payment_was_canceled">Payment was canceled</string>
    <string name="payment_session_problem_occurred_detail">%d: %s\n\n%s</string>
    <string name="abort_payment_not_allowed">Abort payment currently not possible</string>

    <!-- Barcode scanning and camera permission -->
    <string name="camera_access_needed">Ge access till kameran för att tillåta scanning av QR</string>
    <string name="camera_access_is_a_must">Du måste gå till inställningar och ge access till kameran för att tillåta scanning av QR</string>
    <string name="scanner_no_url_found">Fel på url</string>
    <string name="scanner_no_number_found">Fel på telefonnummer</string>

    <string name="items_title">Shoes</string>
    <string name="item_image">Item image</string>
    <string name="remove">Remove</string>
    <string name="close">Close</string>
    <string name="cart_title">Shopping basket</string>
    <string name="add_to_cart_description">Add to shopping basket</string>
    <string name="remove_from_cart_description">Remove from shopping basket</string>
    <string name="shipping">Shipping</string>
    <string name="total">Total (Click to change)</string>
    <string name="check_out">Checkout</string>
    <string name="get_session">Get session</string>
    <string name="abort_native_payment">Abort</string>
    <string name="open_settings">Open settings</string>
    <string name="close_settings">Close settings</string>
    <string name="currency">Currency</string>
    <string name="currency_nok">NOK</string>
    <string name="currency_sek">SEK</string>
    <string name="user_type">User type</string>
    <string name="instrument_mode">Instrument Mode (tap to change)</string>
    <string name="instrument_mode_disabled">Disabled</string>

    <string name="identified">Identified</string>
    <string name="country">Country</string>
    <string name="norway">Norway</string>
    <string name="sweden">Sweden</string>
    <string name="browser">Use Browser</string>
    <string name="option_yes">YES</string>
    <string name="option_no">NO</string>
    <string name="disable_payment_menu">Disable Payment Menu</string>
    <string name="disable_payment_menu_yes">Disable</string>
    <string name="disable_payment_menu_no">Don\'t disable</string>
    <string name="payer_reference">Payer Reference</string>
    <string name="payer_reference_hint">payerReference</string>
    <string name="payer_reference_generate">Generate</string>
    <string name="payer_reference_last_used">Last Used</string>
    <string name="payment_token">Payment Token</string>
    <string name="payment_token_hint">paymentToken</string>
    <string name="payment_token_get">GET</string>
    <string name="generate_token">Generate Payment Token</string>
    <string name="instruments">Restricted instruments</string>
    <string name="instruments_hint">Instruments separated with comma</string>
    <string name="use_bogus_hosturl">Test wrong page url for paymentmenu</string>
    <string name="use_bogus_hosturl_yes">Enable</string>
    <string name="use_bogus_hosturl_no">Disable</string>
    <string name="subsite_hint">subsite</string>

    <string name="payer_reference_current">Current</string>
    <string name="payer_reference_use">USE</string>
    <string name="payer_reference_delete">DELETE</string>


    <string name="consumer">Consumer</string>
    <string name="close_consumer">Close Consumer Settings</string>
    <string name="guest">Guest</string>
    <string name="checkin">Checkin</string>
    <string name="prefilled">Prefilled</string>
    <string name="consumer_email">email</string>
    <string name="consumer_msisdn">phone number</string>
    <string name="consumer_profileref">consumerProfileRef</string>

    <string name="env_stage">Stage</string>
    <string name="env_ext_integration">Ext. Integration</string>
    <string name="env_ext_integration_java">Ext. Java Backend</string>
    <string name="env_pp_ext_integration">PaymentPages (EI)</string>
    <string name="env_prod">Prod</string>

    <string name="success_dialog_title">Payment successful!</string>

    <string name="error_dialog_title">Payment failed</string>
    <string name="error_server_problem">Payment service is unavailable at the moment. Please try again later.</string>
    <string name="error_client_problem">There appears to be a problem communicating with the payment service. Please try again later.</string>
    <string name="error_terminal_failure">There appears to be a configuration error in the payment service. Please try again later.</string>

    <string name="error_problem_id_format">Problem ID: %s</string>

    <string name="instrument_spinner_title">Instrument</string>
    <string name="instrument_input_hint">Payment Instrument</string>
    <string name="instrument_none">(none)</string>
    <string name="update_instrument_failed">Unable to change instrument</string>
    <string name="invalid_instrument_format">%s is not valid for this payment</string>

    <string name="no_tokens_note_title">Note</string>
    <string name="no_tokens_note_body">No payment tokens found</string>
    <string name="get_tokens_error_title">Error</string>
    <string name="get_tokens_error_not_supported">Environment does not support token retrieval</string>
    <string name="get_tokens_error_other">Could not retrieve tokens</string>

    <string name="style_title">Style</string>
    <string name="style_error">Invalid style</string>

    <string name="native_payments">Native payments</string>
    <string name="seamless_view">Seamless view</string>


</resources>
