<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        style="@style/big_text"
        android:id="@+id/payer_reference"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/payer_reference"/>
    <Button
        android:id="@+id/payer_reference_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/payer_reference_last_used"
        app:layout_constraintTop_toBottomOf="@id/payer_reference"
        android:text="@string/payer_reference_current"/>
    <Button
        android:id="@+id/payer_reference_last_used"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/payer_reference_current"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/payer_reference_current"
        android:text="@string/payer_reference_last_used"/>
    <EditText
        android:id="@+id/payer_reference_input"
        android:layout_width="0dp"
        android:singleLine="true"
        android:layout_height="wrap_content"
        android:backgroundTint="#666666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/payer_reference_current"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"
        android:textColorHint="#999999"
        android:hint="@string/payer_reference_hint"/>

    <Button
        android:id="@+id/payment_token_get"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/payer_reference_input"
        android:text="@string/payment_token_get"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/payment_tokens_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/payment_token_get"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/updating_indicator"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/payment_tokens_recycler_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>