<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/expanding_button_background"
        android:backgroundTint="#000000">
        <TextView
            style="@style/tiny_white_text"
            android:id="@+id/open_consumer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/consumer"/>
        <ImageView
            android:id="@+id/close_consumer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_close"
            android:tint="#FFFFFF"
            android:contentDescription="@string/close_consumer"/>
        <include android:id="@+id/consumer_guest"
            layout="@layout/settings_option_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/open_consumer"/>
        <include android:id="@+id/consumer_checkin"
            layout="@layout/settings_option_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/consumer_guest"/>
        <include android:id="@+id/consumer_prefill"
            layout="@layout/settings_option_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/consumer_checkin"/>
        <EditText
            style="@style/tiny_white_text"
            android:id="@+id/consumer_email"
            android:layout_width="0dp"
            android:singleLine="true"
            android:layout_height="wrap_content"
            android:backgroundTint="#666666"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/consumer_prefill"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:textColorHint="#999999"
            android:hint="@string/consumer_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:imeOptions="actionDone"/>
        <EditText
            style="@style/tiny_white_text"
            android:id="@+id/consumer_msisdn"
            android:layout_width="0dp"
            android:singleLine="true"
            android:layout_height="wrap_content"
            android:backgroundTint="#666666"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/consumer_email"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:textColorHint="#999999"
            android:hint="@string/consumer_msisdn"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:imeOptions="actionDone"/>
        <EditText
            style="@style/tiny_white_text"
            android:id="@+id/consumer_profileref"
            android:layout_width="0dp"
            android:singleLine="true"
            android:layout_height="wrap_content"
            android:backgroundTint="#666666"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/consumer_msisdn"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:textColorHint="#999999"
            android:hint="@string/consumer_profileref"
            android:importantForAutofill="no"
            android:inputType="textNoSuggestions"
            android:imeOptions="actionDone"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/consumer_expanded_state_widgets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="close_consumer,consumer_guest,consumer_checkin,consumer_prefill,consumer_email,consumer_msisdn,consumer_profileref"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>