<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/expanding_button_background"
        android:backgroundTint="#000000">
        <TextView
            style="@style/tiny_white_text"
            android:id="@+id/open_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/style_title"/>
        <ImageView
            android:id="@+id/close_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_close"
            android:contentDescription="@string/close_consumer"
            app:tint="#FFFFFF" />
        <TextView
            style="@style/small_text"
            android:id="@+id/style_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/style_input"
            app:layout_constraintTop_toBottomOf="@id/open_style"
            android:textColor="@android:color/holo_red_dark"
            tools:text="@string/style_error"
            />
        <EditText
            android:id="@+id/style_input"
            android:layout_width="0dp"
            android:layout_height="120dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/style_error"
            android:background="@android:color/white"
            android:textColor="@android:color/black"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:importantForAutofill="no"
            android:inputType="text|textMultiLine|textNoSuggestions"
            android:gravity="top"
            android:hint="@string/style_title"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/style_expanded_state_widgets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="close_style,style_error,style_input"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>